Anti-Fraud System - Stage 5: completed.